Fix checklist checkbox alignment

--- a/cloud_site/assets/cloud.css
+++ b/cloud_site/assets/cloud.css
@@ -432,10 +432,10 @@ body {
 }
 
 .markdown-section li input[type="checkbox"] {
+  flex: 0 0 auto;
   width: 1.05em;
   height: 1.05em;
-  margin: 0 0.42em 0.16em -1.15em;
-  vertical-align: middle;
+  margin: 0.08em 0.45em 0 0;
   appearance: none;
   -webkit-appearance: none;
   position: relative;
@@ -464,13 +464,14 @@ body {
 }
 
 .markdown-section li:has(input[type="checkbox"]) {
-  display: block;
+  display: flex;
+  align-items: flex-start;
   width: fit-content;
   max-width: calc(100% - 0.4rem);
   box-sizing: border-box;
   list-style: none;
-  margin: 0.14rem 0 0.14rem 0.12rem;
-  padding: 0.08rem 0.64rem 0.08rem 0.24rem;
+  margin: 0.14rem 0 0.14rem -0.1rem;
+  padding: 0.08rem 0.64rem 0.08rem 0.34rem;
   border-radius: 7px;
 }
 
